src/main/java/org/example/ClassWithVulnerability.java
package org.example;


import java.io.IOException;

public class ClassWithVulnerability {
    public void safeCommandRunner(String s) throws IOException {
        if (s != "/bin/sh") {   // error
            commandRunner(s);
        }
    }

    private void commandRunner(String s) throws IOException {
        ProcessBuilder pb = new ProcessBuilder();
        pb.command(s);
        pb.start();
    }
}
